// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradingCard Rendering when the trading is in progress to start renders according to design 1`] = `
<div
  className="sc-gZMcBi hxmHeh"
>
  <div
    className="sc-gqjmRU gKGRsG sc-ifAKCX LlTRb"
  >
    <div
      className="sc-bdVaJa lhrPED"
    >
      <label
        className="sc-bwzfXH ebnOHd"
        htmlFor="Ativo"
      >
        Ativo:
      </label>
      <label
        className="sc-htpNat jMFgIO"
        id="AtivoValue"
        name="AtivoValue"
      >
        WINM20
      </label>
    </div>
    <div
      className="sc-bdVaJa lhrPED"
    >
      <label
        className="sc-bwzfXH ebnOHd"
        htmlFor="Tipo"
      >
        Tipo:
      </label>
      <label
        className="sc-htpNat jMFgIO"
        id="TipoValue"
        name="TipoValue"
      >
        Pregão
      </label>
    </div>
    <div
      className="sc-bdVaJa lhrPED"
    >
      <label
        className="sc-bwzfXH ebnOHd"
        htmlFor="Sistema"
      >
        Sistema:
      </label>
      <label
        className="sc-htpNat jMFgIO"
        id="SistemaValue"
        name="SistemaValue"
      >
        
      </label>
    </div>
    <div
      className="sc-bdVaJa lhrPED"
    >
      <label
        className="sc-bwzfXH ebnOHd"
        htmlFor="Estratégia"
      >
        Estratégia:
      </label>
      <label
        className="sc-htpNat jMFgIO"
        id="EstratégiaValue"
        name="EstratégiaValue"
      >
        Topo / Fundo
      </label>
    </div>
  </div>
  <div
    className="sc-VigVT LFvVe sc-dnqmqq fJKWBr"
  >
    <div
      className="sc-EHOje jXBFJp"
    >
      <label
        className="sc-bZQynM kVYShC"
        htmlFor="Entrada"
      >
        Entrada:
      </label>
      <label
        className="sc-gzVnrw dCTTSC"
        id="EntradaValue"
        name="EntradaValue"
      >
        
      </label>
    </div>
    <div
      className="sc-EHOje jXBFJp"
    >
      <label
        className="sc-bZQynM kVYShC"
        htmlFor="Stop Base"
      >
        Stop Base:
      </label>
      <label
        className="sc-gzVnrw dCTTSC"
        id="Stop BaseValue"
        name="Stop BaseValue"
      >
        
      </label>
    </div>
    <div
      className="sc-EHOje jXBFJp"
    >
      <label
        className="sc-bZQynM kVYShC"
        htmlFor="Hora"
      >
        Hora:
      </label>
      <label
        className="sc-gzVnrw dCTTSC"
        id="HoraValue"
        name="HoraValue"
      >
        
      </label>
    </div>
    <button
      className="sc-iwsKbI fMhkFm"
      disabled={true}
      onClick={[Function]}
      value="Iniciar"
    >
      Iniciar
    </button>
  </div>
</div>
`;

exports[`TradingCard Rendering when the trading is waiting to start renders according to design 1`] = `
<div
  className="sc-gZMcBi hxmHeh"
>
  <div
    className="sc-gqjmRU gKGRsG sc-ifAKCX LlTRb"
  >
    <div
      className="sc-bdVaJa lhrPED"
    >
      <label
        className="sc-bwzfXH ebnOHd"
        htmlFor="Ativo"
      >
        Ativo:
      </label>
      <select
        className="sc-bxivhb ldZUon"
        id="Ativo"
        name="Ativo"
        onChange={[Function]}
      >
        <option
          value="WINM20"
        >
          WINM20
        </option>
        <option
          value="WDON20"
        >
          WDON20
        </option>
      </select>
    </div>
    <div
      className="sc-bdVaJa lhrPED"
    >
      <label
        className="sc-bwzfXH ebnOHd"
        htmlFor="Tipo"
      >
        Tipo:
      </label>
      <select
        className="sc-bxivhb ldZUon"
        id="Tipo"
        name="Tipo"
        onChange={[Function]}
      >
        <option
          value="Pregão"
        >
          Pregão
        </option>
        <option
          value="Abertura"
        >
          Abertura
        </option>
      </select>
    </div>
    <div
      className="sc-bdVaJa lhrPED"
    >
      <label
        className="sc-bwzfXH ebnOHd"
        htmlFor="Sistema"
      >
        Sistema:
      </label>
      <select
        className="sc-bxivhb ldZUon"
        id="Sistema"
        name="Sistema"
        onChange={[Function]}
      >
        <option
          value={1}
        >
          name 1
        </option>
        <option
          value={2}
        >
          name 2
        </option>
      </select>
    </div>
    <div
      className="sc-bdVaJa lhrPED"
    >
      <label
        className="sc-bwzfXH ebnOHd"
        htmlFor="Estratégia"
      >
        Estratégia:
      </label>
      <select
        className="sc-bxivhb ldZUon"
        id="Estratégia"
        name="Estratégia"
        onChange={[Function]}
      >
        <option
          value="Topo / Fundo"
        >
          Topo / Fundo
        </option>
        <option
          value="Fecha Fora / Fecha Dentro"
        >
          Fecha Fora / Fecha Dentro
        </option>
        <option
          value="3x1"
        >
          3x1
        </option>
        <option
          value="Fabolous 4"
        >
          Fabolous 4
        </option>
      </select>
    </div>
  </div>
  <div
    className="sc-VigVT LFvVe sc-dnqmqq fJKWBr"
  >
    <div
      className="sc-EHOje jXBFJp"
    >
      <label
        className="sc-bZQynM kVYShC"
        htmlFor="Entrada"
      >
        Entrada:
      </label>
      <input
        className="sc-htoDjs hRnGtG"
        id="Entrada"
        name="Entrada"
        onChange={[Function]}
        type="text"
      />
    </div>
    <div
      className="sc-EHOje jXBFJp"
    >
      <label
        className="sc-bZQynM kVYShC"
        htmlFor="Stop Base"
      >
        Stop Base:
      </label>
      <input
        className="sc-htoDjs hRnGtG"
        id="Stop Base"
        name="Stop Base"
        onChange={[Function]}
        type="text"
      />
    </div>
    <div
      className="sc-EHOje jXBFJp"
    >
      <label
        className="sc-bZQynM kVYShC"
        htmlFor="Hora"
      >
        Hora:
      </label>
      <input
        className="sc-htoDjs hRnGtG"
        id="Hora"
        name="Hora"
        onChange={[Function]}
        type="text"
      />
    </div>
    <button
      className="sc-iwsKbI fMhkFm"
      disabled={false}
      onClick={[Function]}
      value="Iniciar"
    >
      Iniciar
    </button>
  </div>
</div>
`;
